// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setupSSR with application builder should create the files correctly for ssr 1`] = `
{
  "configurations": {
    "development": {
      "extractLicenses": false,
      "optimization": false,
      "sourceMap": true,
    },
    "production": {
      "budgets": [
        {
          "maximumError": "1mb",
          "maximumWarning": "500kb",
          "type": "initial",
        },
        {
          "maximumError": "8kb",
          "maximumWarning": "4kb",
          "type": "anyComponentStyle",
        },
      ],
      "outputHashing": "all",
    },
  },
  "defaultConfiguration": "production",
  "executor": "@angular/build:application",
  "options": {
    "assets": [
      {
        "glob": "**/*",
        "input": "app1/public",
      },
    ],
    "browser": "app1/src/main.ts",
    "outputPath": "dist/app1",
    "polyfills": [
      "zone.js",
    ],
    "prerender": true,
    "server": "app1/src/main.server.ts",
    "ssr": {
      "entry": "app1/src/server.ts",
    },
    "styles": [
      "app1/src/styles.css",
    ],
    "tsConfig": "app1/tsconfig.app.json",
  },
  "outputs": [
    "{options.outputPath}",
  ],
}
`;

exports[`setupSSR with application builder should create the files correctly for ssr 2`] = `
"import { APP_BASE_HREF } from '@angular/common';
import { CommonEngine, isMainModule } from '@angular/ssr/node';
import express from 'express';
import { dirname, join, resolve } from 'node:path';
import { fileURLToPath } from 'node:url';
import AppServerModule from './main.server';

const serverDistFolder = dirname(fileURLToPath(import.meta.url));
const browserDistFolder = resolve(serverDistFolder, '../browser');
const indexHtml = join(serverDistFolder, 'index.server.html');

const app = express();
const commonEngine = new CommonEngine();

/**
 * Example Express Rest API endpoints can be defined here.
 * Uncomment and define endpoints as necessary.
 *
 * Example:
 * \`\`\`ts
 * app.get('/api/**', (req, res) => {
 *   // Handle API request
 * });
 * \`\`\`
 */

/**
 * Serve static files from /browser
 */
app.get(
  '**',
  express.static(browserDistFolder, {
    maxAge: '1y',
    index: 'index.html',
  })
);

/**
 * Handle all other requests by rendering the Angular application.
 */
app.get('**', (req, res, next) => {
  const { protocol, originalUrl, baseUrl, headers } = req;

  commonEngine
    .render({
      bootstrap: AppServerModule,
      documentFilePath: indexHtml,
      url: \`\${protocol}://\${headers.host}\${originalUrl}\`,
      publicPath: browserDistFolder,
      providers: [{ provide: APP_BASE_HREF, useValue: baseUrl }],
    })
    .then((html) => res.send(html))
    .catch((err) => next(err));
});

/**
 * Start the server if this module is the main entry point.
 * The server listens on the port defined by the \`PORT\` environment variable, or defaults to 4000.
 */
if (isMainModule(import.meta.url)) {
  const port = process.env['PORT'] || 4000;
  app.listen(port, () => {
    console.log(\`Node Express server listening on http://localhost:\${port}\`);
  });
}

export default app;
"
`;

exports[`setupSSR with application builder should create the files correctly for ssr when app is standalone 1`] = `
{
  "configurations": {
    "development": {
      "extractLicenses": false,
      "optimization": false,
      "sourceMap": true,
    },
    "production": {
      "budgets": [
        {
          "maximumError": "1mb",
          "maximumWarning": "500kb",
          "type": "initial",
        },
        {
          "maximumError": "8kb",
          "maximumWarning": "4kb",
          "type": "anyComponentStyle",
        },
      ],
      "outputHashing": "all",
    },
  },
  "defaultConfiguration": "production",
  "executor": "@angular/build:application",
  "options": {
    "assets": [
      {
        "glob": "**/*",
        "input": "app1/public",
      },
    ],
    "browser": "app1/src/main.ts",
    "outputPath": "dist/app1",
    "polyfills": [
      "zone.js",
    ],
    "prerender": true,
    "server": "app1/src/main.server.ts",
    "ssr": {
      "entry": "app1/src/server.ts",
    },
    "styles": [
      "app1/src/styles.css",
    ],
    "tsConfig": "app1/tsconfig.app.json",
  },
  "outputs": [
    "{options.outputPath}",
  ],
}
`;

exports[`setupSSR with application builder should create the files correctly for ssr when app is standalone 2`] = `
"import { APP_BASE_HREF } from '@angular/common';
import { CommonEngine, isMainModule } from '@angular/ssr/node';
import express from 'express';
import { dirname, join, resolve } from 'node:path';
import { fileURLToPath } from 'node:url';
import bootstrap from './main.server';

const serverDistFolder = dirname(fileURLToPath(import.meta.url));
const browserDistFolder = resolve(serverDistFolder, '../browser');
const indexHtml = join(serverDistFolder, 'index.server.html');

const app = express();
const commonEngine = new CommonEngine();

/**
 * Example Express Rest API endpoints can be defined here.
 * Uncomment and define endpoints as necessary.
 *
 * Example:
 * \`\`\`ts
 * app.get('/api/**', (req, res) => {
 *   // Handle API request
 * });
 * \`\`\`
 */

/**
 * Serve static files from /browser
 */
app.get(
  '**',
  express.static(browserDistFolder, {
    maxAge: '1y',
    index: 'index.html',
  })
);

/**
 * Handle all other requests by rendering the Angular application.
 */
app.get('**', (req, res, next) => {
  const { protocol, originalUrl, baseUrl, headers } = req;

  commonEngine
    .render({
      bootstrap,
      documentFilePath: indexHtml,
      url: \`\${protocol}://\${headers.host}\${originalUrl}\`,
      publicPath: browserDistFolder,
      providers: [{ provide: APP_BASE_HREF, useValue: baseUrl }],
    })
    .then((html) => res.send(html))
    .catch((err) => next(err));
});

/**
 * Start the server if this module is the main entry point.
 * The server listens on the port defined by the \`PORT\` environment variable, or defaults to 4000.
 */
if (isMainModule(import.meta.url)) {
  const port = process.env['PORT'] || 4000;
  app.listen(port, () => {
    console.log(\`Node Express server listening on http://localhost:\${port}\`);
  });
}

export default app;
"
`;

exports[`setupSSR with browser builder should create the files correctly for ssr 1`] = `
{
  "configurations": {
    "development": {
      "buildOptimizer": false,
      "extractLicenses": false,
      "optimization": false,
      "sourceMap": true,
      "vendorChunk": true,
    },
    "production": {
      "outputHashing": "media",
    },
  },
  "defaultConfiguration": "production",
  "dependsOn": [
    "build",
  ],
  "executor": "@angular-devkit/build-angular:server",
  "options": {
    "main": "app1/src/server.ts",
    "outputPath": "dist/app1/server",
    "tsConfig": "app1/tsconfig.server.json",
  },
}
`;

exports[`setupSSR with browser builder should create the files correctly for ssr 2`] = `
"import 'zone.js/node';

import { APP_BASE_HREF } from '@angular/common';
import { CommonEngine } from '@angular/ssr/node';
import * as express from 'express';
import { existsSync } from 'node:fs';
import { join } from 'node:path';
import AppServerModule from './main.server';

// The Express app is exported so that it can be used by serverless Functions.
export function app(): express.Express {
  const server = express();
  const distFolder = join(process.cwd(), 'dist/app1/browser');
  const indexHtml = existsSync(join(distFolder, 'index.original.html'))
    ? join(distFolder, 'index.original.html')
    : join(distFolder, 'index.html');

  const commonEngine = new CommonEngine();

  server.set('view engine', 'html');
  server.set('views', distFolder);

  // Example Express Rest API endpoints
  // server.get('/api/**', (req, res) => { });
  // Serve static files from /browser
  server.get('*.*', express.static(distFolder, {
    maxAge: '1y'
  }));

  // All regular routes use the Angular engine
  server.get('*', (req, res, next) => {
    const { protocol, originalUrl, baseUrl, headers } = req;

    commonEngine
      .render({
        bootstrap: AppServerModule,
        documentFilePath: indexHtml,
        url: \`\${protocol}://\${headers.host}\${originalUrl}\`,
        publicPath: distFolder,
        providers: [{ provide: APP_BASE_HREF, useValue: baseUrl }],
      })
      .then((html) => res.send(html))
      .catch((err) => next(err));
  });

  return server;
}

function run(): void {
  const port = process.env['PORT'] || 4000;

  // Start up the Node server
  const server = app();
  server.listen(port, () => {
    console.log(\`Node Express server listening on http://localhost:\${port}\`);
  });
}

// Webpack will replace 'require' with '__webpack_require__'
// '__non_webpack_require__' is a proxy to Node 'require'
// The below code is to ensure that the server is run only when not requiring the bundle.
declare const __non_webpack_require__: NodeRequire;
const mainModule = __non_webpack_require__.main;
const moduleFilename = mainModule && mainModule.filename || '';
if (moduleFilename === __filename || moduleFilename.includes('iisnode')) {
  run();
}

export default AppServerModule;
"
`;

exports[`setupSSR with browser builder should create the files correctly for ssr when app is standalone 1`] = `
{
  "configurations": {
    "development": {
      "buildOptimizer": false,
      "extractLicenses": false,
      "optimization": false,
      "sourceMap": true,
      "vendorChunk": true,
    },
    "production": {
      "outputHashing": "media",
    },
  },
  "defaultConfiguration": "production",
  "dependsOn": [
    "build",
  ],
  "executor": "@angular-devkit/build-angular:server",
  "options": {
    "main": "app1/src/server.ts",
    "outputPath": "dist/app1/server",
    "tsConfig": "app1/tsconfig.server.json",
  },
}
`;

exports[`setupSSR with browser builder should create the files correctly for ssr when app is standalone 2`] = `
"import 'zone.js/node';

import { APP_BASE_HREF } from '@angular/common';
import { CommonEngine } from '@angular/ssr/node';
import * as express from 'express';
import { existsSync } from 'node:fs';
import { join } from 'node:path';
import bootstrap from './main.server';

// The Express app is exported so that it can be used by serverless Functions.
export function app(): express.Express {
  const server = express();
  const distFolder = join(process.cwd(), 'dist/app1/browser');
  const indexHtml = existsSync(join(distFolder, 'index.original.html'))
    ? join(distFolder, 'index.original.html')
    : join(distFolder, 'index.html');

  const commonEngine = new CommonEngine();

  server.set('view engine', 'html');
  server.set('views', distFolder);

  // Example Express Rest API endpoints
  // server.get('/api/**', (req, res) => { });
  // Serve static files from /browser
  server.get('*.*', express.static(distFolder, {
    maxAge: '1y'
  }));

  // All regular routes use the Angular engine
  server.get('*', (req, res, next) => {
    const { protocol, originalUrl, baseUrl, headers } = req;

    commonEngine
      .render({
        bootstrap,
        documentFilePath: indexHtml,
        url: \`\${protocol}://\${headers.host}\${originalUrl}\`,
        publicPath: distFolder,
        providers: [{ provide: APP_BASE_HREF, useValue: baseUrl }],
      })
      .then((html) => res.send(html))
      .catch((err) => next(err));
  });

  return server;
}

function run(): void {
  const port = process.env['PORT'] || 4000;

  // Start up the Node server
  const server = app();
  server.listen(port, () => {
    console.log(\`Node Express server listening on http://localhost:\${port}\`);
  });
}

// Webpack will replace 'require' with '__webpack_require__'
// '__non_webpack_require__' is a proxy to Node 'require'
// The below code is to ensure that the server is run only when not requiring the bundle.
declare const __non_webpack_require__: NodeRequire;
const mainModule = __non_webpack_require__.main;
const moduleFilename = mainModule && mainModule.filename || '';
if (moduleFilename === __filename || moduleFilename.includes('iisnode')) {
  run();
}

export default bootstrap;
"
`;
